[project]
name = "langgraph-research-agent"
version = "0.1.0"
description = "React style research agent that use langgraph"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.5.9",
    "langchain>=1.3.11",
    "langgraph>=1.2.7",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "loguru>=0.7.3",
    "openai>=2.44.0",
    "pydantic-settings>=2.14.2",
    "ratelimit>=2.2.1",
    "rich>=15.0.0",
    "simpleeval>=1.0.7",
    "tavily-python>=0.7.26",
    "wikipedia-api>=0.15.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-v --strict-markers --cov --cov-report=term-missing"

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
fail_under = 0
exclude_lines = ["pragma: no cover", "raise NotImplementedError"]

# ─── Mypy strict ──────────────────────────────────────────
[tool.mypy]
strict = true
python_version = "3.11"
warn_unreachable = true
warn_unused_ignores = true
disallow_any_explicit = true
disallow_any_generics = true
no_implicit_reexport = true

# Third-party packages that ship no type stubs.
[[tool.mypy.overrides]]
module = ["wikipediaapi", "tavily.*", "simpleeval", "ratelimit.*"]
ignore_missing_imports = true

# Tests don't need strict annotations.
[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
disallow_incomplete_defs = false

# ─── Ruff (linter + formatter) ────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "ANN", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["langgraph_research_agent"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.20",
]

[tool.hatch.build.targets.wheel]
packages = ["src/langgraph_research_agent"]
